# memflow-win32

./: .gitignore  CONTRIBUTORS.md  Cargo.toml  install.sh
.github/workflows/: build.yml  deploy.yml
examples/: dump_offsets.rs  generate_offsets.rs
memflow-win32/: Cargo.toml  build.rs
memflow-win32-defs/: Cargo.toml
memflow-win32-defs/examples/: generate_offsets.rs
memflow-win32-defs/src/: kernel.rs
memflow-win32-defs/src/offsets/: builder.rs  mod.rs  offset_table.rs
memflow-win32-defs/src/offsets/pdb/: data.rs
memflow-win32/examples/: dump_offsets.rs  envars_list.rs  generate_offsets.rs  keyboard_listen.rs  open_process.rs  open_process_with_dtb.rs  process_list.rs
memflow-win32/src/: ida_signatures.rs  lib.rs  win32.rs
memflow-win32/src/kernel/: sysproc.rs
memflow-win32/src/kernel/ntos/: x64.rs  x86.rs
memflow-win32/src/kernel/start_block/: aarch64.rs
memflow-win32/src/offsets/: mod.rs
memflow-win32/src/win32/: envars.rs  kernel.rs  kernel_builder.rs  kernel_info.rs  keyboard.rs  module.rs  process.rs  vkey.rs
memflow-win32/src/win32/kernel/: mem_map.rs
offsets/: 10_0_19041_X64_9C00B19DBDE003DBFE4AB4216993C8431.toml
src/: plugins.rs
src/kernel/ntos/: x64.rs
src/offsets/: builder.rs  mod.rs  offset_table.rs  symstore.rs
src/win32/: kernel.rs  keyboard.rs  process.rs
