[package]
name = "memflow-win32"
version = "0.2.0-beta2"
authors = ["ko1N <ko1N1337@gmail.com>", "Aurimas Blažulionis <0x60@pm.me>"]
edition = "2018"
description = "win32 integration of the memflow physical memory introspection framework"
documentation = "https://docs.rs/memflow-win32"
readme = "README.md"
homepage = "https://memflow.io"
repository = "https://github.com/memflow/memflow-win32"
license-file = "LICENSE"
license = "MIT"
keywords = [ "memflow", "introspection", "memory", "dma" ]
categories = [ "api-bindings", "memory-management", "os" ]

[badges]
maintenance = { status = "actively-developed" }
codecov = { repository = "github", branch = "master", service = "github" }

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
memflow = { version = "^0.2.0-beta", default-features = false }
log = { version = "^0.4.14", default-features = false }
pelite = { version = "^0.9.0", default-features = false }
goblin = { version = "^0.4.3", default-features = false, features = ["pe32", "pe64"] }
widestring = { version = "^0.5.1", default-features = false, features = ["alloc"] }
no-std-compat = { version = "^0.4.1", features = ["alloc"] }
serde = { version = "^1.0.133", default-features = false, optional = true, features = ["derive"] }

# will be replaced by our own signature scanner
regex = { version = "^1.5.0", optional = true }

# symbolstore
dirs = { version = "^4.0.0", optional = true }
ureq = { version = "^2.4.0", optional = true }
pdb = { version = "^0.7.0", optional = true }
indicatif = { version = "^0.16.2", optional = true }
progress-streams = { version = "^1.1.0", optional = true }

[dev_dependencies]
simplelog = "^0.11.1"
rand = "^0.8.4"
rand_xorshift = "^0.3.0"
clap = { version = "^3.0.5", features = ["cargo"] }
toml = "^0.5.8"

[build_dependencies]
toml = "^0.5.8"
serde = { version = "^1.0.133", default-features = false, features = ["derive", "alloc"] }
memflow = { version = "^0.2.0-beta", default-features = false }

[features]
default = ["std", "serde_derive", "embed_offsets", "symstore", "download_progress", "regex", "memflow/default"]
std = ["no-std-compat/std", "memflow/std", "pelite/std", "goblin/std"]
plugins = ["memflow/plugins"]
embed_offsets = ["serde", "memflow/serde_derive"]
serde_derive = ["serde", "memflow/serde_derive", "pelite/std", "pelite/serde", "goblin/std"]
symstore = ["dirs", "ureq", "pdb"]
download_progress = ["indicatif", "progress-streams"]

[[example]]
name = "dump_offsets"
path = "examples/dump_offsets.rs"
required-features = ["memflow/serde_derive"]

[[example]]
name = "generate_offsets"
path = "examples/generate_offsets.rs"
required-features = ["symstore"]
