[package]
name = "memflow-win32"
version = "0.2.1"
authors = ["ko1N <ko1N1337@gmail.com>", "Aurimas Blažulionis <0x60@pm.me>"]
edition = "2021"
rust-version = "1.65"
description = "win32 integration of the memflow physical memory introspection framework"
documentation = "https://docs.rs/memflow-win32"
readme = "../README.md"
homepage = "https://memflow.io"
repository = "https://github.com/memflow/memflow-win32"
license = "MIT"
keywords = [ "memflow", "introspection", "memory", "dma" ]
categories = [ "api-bindings", "memory-management", "os" ]

[badges]
maintenance = { status = "actively-developed" }
codecov = { repository = "github", branch = "master", service = "github" }

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
memflow = { version = "0.2", default-features = false }
log = { version = "0.4", default-features = false }
pelite = { version = "0.10", default-features = false }
widestring = { version = "1.1", default-features = false, features = ["alloc"] }
no-std-compat = { version = "0.4", features = ["alloc"] }
serde = { version = "1.0", default-features = false, optional = true, features = ["derive"] }
memflow-win32-defs = { version = "0.2", path = "../memflow-win32-defs", default-features = false }
muddy = "0.3.2"

# will be replaced by our own signature scanner
regex = { version = "1.11", optional = true }

[dev-dependencies]
simplelog = "0.12"
rand = "0.8"
rand_xorshift = "0.3"
clap = { version = "4.5", features = ["cargo"] }
toml = "0.8"

[build-dependencies]
toml = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
memflow = { version = "0.2", default-features = false }
memflow-win32-defs = { version = "0.2", path = "../memflow-win32-defs", features = ["symstore"] }

[features]
default = ["std", "serde_derive", "embed_offsets", "symstore", "download_progress", "regex", "memflow/default", "plugins"]
std = ["no-std-compat/std", "memflow/std", "pelite/std"]
plugins = ["memflow/plugins"]
embed_offsets = ["serde", "memflow/serde_derive", "memflow-win32-defs/serde"]
serde_derive = ["serde", "memflow/serde_derive", "pelite/std", "pelite/serde", "memflow-win32-defs/serde"]
symstore = ["memflow-win32-defs/symstore"]
download_progress = ["memflow-win32-defs/download_progress"]

[[example]]
name = "dump_offsets"
path = "examples/dump_offsets.rs"
required-features = ["memflow/serde_derive"]

[[example]]
name = "keyboard_listen"
path = "examples/keyboard_listen.rs"
required-features = ["memflow/plugins"]

[[example]]
name = "open_process"
path = "examples/open_process.rs"
required-features = ["memflow/plugins"]

[[example]]
name = "process_list"
path = "examples/process_list.rs"
required-features = ["memflow/plugins"]
